<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov9mit_ros</name>
  <version>0.0.1</version>
  <description>The yolov9mit_ros package</description>
  <maintainer email="53618876+fateshelled@users.noreply.github.com">fateshelled</maintainer>
  <license>MIT License</license>
  <author email="53618876+fateshelled@users.noreply.github.com">fateshelled</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>yolov9mit</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
